Fixed flask run app through docker run. Added bash scripts that manages env variable export and settled up flask run commands

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,9 +6,7 @@ LABEL key="app"
 WORKDIR /app
 COPY . .
 RUN python3 -m pip install -r /app/requirements.txt
-RUN export FLASK_APP=main
-RUN export FLASK_ENV=development
+ENTRYPOINT ["/bin/bash", "/app/start.sh"]
+RUN chmod +x /app/profile.sh
+RUN chmod +x /app/start.sh
 EXPOSE 5001
-# CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
-CMD ["python3 -m flask init-db && python3 -m run flask run -h localhost -p 5001"]
-# CMD ["python3", "-m", "flask", "init-db", "&&", "python3", "-m", "flask", "run", "-h", "localhost", "-p", "5001"]
