--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,12 +1,9 @@
 # syntax=docker/dockerfile:1
 
-ARG VERSION=latest
-FROM python:3.8-slim-buster
+ARG VERSION=alpine
+FROM tiangolo/uwsgi-nginx-flask:python3.8-alpine
 LABEL key="app"
-WORKDIR /app
+WORKDIR /var/www
 COPY . .
-RUN python3 -m pip install -r /app/requirements.txt
-ENTRYPOINT ["/bin/bash", "/app/start.sh"]
-RUN chmod +x /app/profile.sh
-RUN chmod +x /app/start.sh
+RUN python3 -m pip install -r requirements.txt
 EXPOSE 5001
