--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             - POSTGRES_PASSWORD
             - POSTGRES_DB
         volumes:
-            - ./db/docker-entrypoint-initdb.d/creare-tables.sql:/docker-entrypoint-initdb.d/creare-tables.sql
+            - ./db/docker-entrypoint-initdb.d/create-tables.sql:/docker-entrypoint-initdb.d/create-tables.sql
         logging:
             options:
                 max-size: 10m
@@ -22,15 +22,17 @@ services:
         networks:
             - back_tier
     app:
-        image: python:3.8-slim-buster
-        build: ./app
+        image: tiangolo/uwsgi-nginx-flask:python3.8-alpine
+        build: /var/www
         environment:
-            - APP_HOST
-            - APP_PORT
+            - FLASK_RUN_HOST
+            - FLASK_RUN_PORT
+            - STATIC_URL
+            - STATIC_PATH
         ports:
-            - "${APP_PORT}:${APP_PORT}"
+            - "${FLASK_RUN_PORT}:${FLASK_RUN_PORT}"
         healthcheck:
-            test: ["CMD-SHELL", "curl --fail -s http:/${APP_HOST}:${APP_PORT}/ || exit 1"]
+            test: ["CMD-SHELL", "curl --fail -s http:/${FLASK_RUN_HOST}:${FLASK_RUN_PORT}/ || exit 1"]
             interval: 5s
             timeout: 10s
             retries: 5
@@ -40,6 +42,20 @@ services:
                 condition: service_healthy
         networks:
             - back_tier
+    client:
+        image: node:18.4.0
+        build: /client
+        environment:
+            - REACT_PORT
+        ports:
+            - "${REACT_PORT}:${REACT_PORT}"
+        depends_on:
+            db:
+                condition: service_healthy
+            app:
+                condition: service_started
+        networks:
+            - front_tier
 volumes:
     db:
         driver: "local"
