--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,14 +23,15 @@ services:
             - back_tier
     app:
         image: tiangolo/uwsgi-nginx-flask:python3.8-alpine
-        build: ./var/www
+        build:
+            context: /app
         environment:
             - FLASK_RUN_HOST
             - FLASK_RUN_PORT
             - STATIC_URL
             - STATIC_PATH
         ports:
-            - "${FLASK_RUN_PORT}:${FLASK_RUN_PORT}"
+            - ${FLASK_RUN_PORT}:5000
         healthcheck:
             test: ["CMD-SHELL", "curl --fail -s http:/${FLASK_RUN_HOST}:${FLASK_RUN_PORT}/ || exit 1"]
             interval: 5s
@@ -44,11 +45,12 @@ services:
             - back_tier
     client:
         image: node:18.4.0
-        build: ./client
+        build:
+            context: /client
         environment:
             - REACT_PORT
         ports:
-            - "${REACT_PORT}:${REACT_PORT}"
+            - ${REACT_PORT}:3000
         depends_on:
             db:
                 condition: service_healthy
