--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,11 @@
 # syntax=docker/dockerfile:1
 
 ARG VERSION=alpine
-FROM tiangolo/uwsgi-nginx-flask:python3.8-alpine
-LABEL key="app"
-WORKDIR /var/www
+FROM python:3.11-rc-buster
+LABEL key="nadiein-server"
+WORKDIR /app
 COPY . .
-RUN python3 -m pip install -r requirements.txt
+RUN python3 -m pip install -r requirements.txt && \
+    chmod +x start.sh
 EXPOSE 5001
+CMD [ "./start.sh" ]
