--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
-version: '3.9'
+version: "3.9"
 services:
     db:
         image: postgres:14.4
         restart: always
-        environment:
-            - POSTGRES_USER
-            - POSTGRES_PASSWORD
-            - POSTGRES_DB
+        env_file:
+            - .env
+        ports:
+            - "${POSTGRES_PORT}:5432"
         volumes:
             - ./db/docker-entrypoint-initdb.d/create-tables.sql:/docker-entrypoint-initdb.d/create-tables.sql
         logging:
@@ -24,12 +24,10 @@ services:
     app:
         image: tiangolo/uwsgi-nginx-flask:python3.8-alpine
         build:
-            context: /app
-        environment:
-            - FLASK_RUN_HOST
-            - FLASK_RUN_PORT
-            - STATIC_URL
-            - STATIC_PATH
+            context: ./app
+            dockerfile: Dockerfile
+        env_file:
+            - .env
         ports:
             - ${FLASK_RUN_PORT}:5000
         healthcheck:
@@ -43,12 +41,14 @@ services:
                 condition: service_healthy
         networks:
             - back_tier
+            - front_tier
     client:
         image: node:18.4.0
         build:
-            context: /client
-        environment:
-            - REACT_PORT
+            context: ./client
+            dockerfile: Dockerfile
+        env_file:
+            - .env
         ports:
             - ${REACT_PORT}:3000
         depends_on:
@@ -58,6 +58,7 @@ services:
                 condition: service_started
         networks:
             - front_tier
+            - back_tier
 volumes:
     db:
         driver: "local"
