--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,6 +6,8 @@ LABEL key="nadiein-server"
 WORKDIR /app
 COPY . .
 RUN python3 -m pip install -r requirements.txt && \
-    chmod +x start.sh
-EXPOSE 5001
-CMD [ "./start.sh" ]
+    chmod +x start.sh && \
+    ./start.sh
+EXPOSE ${FLASK_RUN_PORT}
+ENTRYPOINT [ "python3" ]
+CMD [ "main.py" ]
