--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,6 +3,6 @@ FROM node:18.4.0
 LABEL key="nadiein-client"
 WORKDIR /app
 COPY . .
-RUN npm install
+RUN npm i
 EXPOSE 3001
-CMD [ "npm run start" ]
+CMD [ "npm", "start" ]
